--- a/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ShowUnusedLayers=True
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Rendering Features.Rendering Features
+PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,
 StaticMesh=StaticMesh.ImportSettings.Material,
 
 [ContentBrowser]
@@ -184,7 +184,7 @@ LastLevel=/Game/Lazy_Saloon/WesternMap
 CleanShutdown=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -553,28 +553,78 @@ MaterialOptions.MeshSettings=True
 MaterialOptions.MaterialBakeSettings=True
 StaticMesh.Thumbnail=True
 FbxImportUI.Animation=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Physics=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.VirtualTexture=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
+MaterialExpressionParticleSubUV.MaterialExpressionParticleSubUV=True
+MaterialExpressionParticleSubUV.MaterialExpressionTextureSample=True
+MaterialExpressionParticleSubUV.MaterialExpressionTextureBase=True
+MaterialExpressionParticleSubUV.MaterialExpression=True
+TextureCube.Compression=True
+TextureCube.File Path=True
+TextureCube.Texture=True
+TextureCube.Adjustments=True
+TextureCube.LevelOfDetail=True
+TextureCube.Compositing=True
+BP_LightStudio_C.Default=True
+BP_LightStudio_C.Tick=True
+BP_LightStudio_C.Global=True
+BP_LightStudio_C.HDRI=True
+BP_LightStudio_C.Sun=True
+BP_LightStudio_C.Atmosphere=True
+BP_LightStudio_C.Fog=True
+BP_LightStudio_C.SkyLight=True
+BP_LightStudio_C.LightShafts=True
+BP_LightStudio_C.Rendering=True
+BP_LightStudio_C.Replication=True
+BP_LightStudio_C.Collision=True
+BP_LightStudio_C.Input=True
+BP_LightStudio_C.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Activation=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Lazy_Saloon/Models/Furniture/Materials/Barrel02
-MRUItem1=/Game/Lazy_Saloon/Models/Furniture/Barrel02
-MRUItem2=/Game/Lazy_Saloon/Models/Furniture/Barrel01
-MRUItem3=/Game/Lazy_Saloon/Models/Furniture/Materials/Barrel01
-MRUItem4=/Game/Lazy_Saloon/Models/Furniture/Bed
-MRUItem5=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-Rug_2
-MRUItem6=/Game/Lazy_Saloon/Models/Furniture/Materials/Bed
-MRUItem7=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Door_Base
-MRUItem8=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/S-Trim_Trim_BaseColor
-MRUItem9=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/WFrame_Rough
-MRUItem10=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/WFrame_Base
-MRUItem11=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/Saloon-OuterWalls_02_Wall01_BaseColor
-MRUItem12=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/SWall01_Rough
-MRUItem13=/Game/Lazy_Saloon/Models/Structure/SFloorWall02
-MRUItem14=/Game/Lazy_Saloon/Models/Structure/Textures/SFloorWall02_Wall01_Roughness
-MRUItem15=/Game/Lazy_Saloon/Models/Structure/Textures/Walls03
-MRUItem16=/Game/Lazy_Saloon/Models/Structure/SFloorWall01
-MRUItem17=/Game/Lazy_Saloon/Models/Furniture/Saloon-Door
-MRUItem18=/Game/Lazy_Saloon/Models/Structure/Textures/Saloon-Inner02
-MRUItem19=/Game/Lazy_Saloon/Models/Structure/Textures/Wall01
+MRUItem0=/Game/StarterContent/Blueprints/BP_LightStudio
+MRUItem1=/Game/Lazy_Saloon/Models/Misc/HDRI_Epic_Courtyard_Daylight
+MRUItem2=/Game/Lazy_Saloon/Models/Misc/Particles/M_Dust_Particle
+MRUItem3=/Game/StarterContent/Textures/T_Dust_Particle_D
+MRUItem4=/Game/StarterContent/Particles/Materials/M_Dust_Particle
+MRUItem5=/Game/Lazy_Saloon/Models/Furniture/Materials/Barrel02
+MRUItem6=/Game/Lazy_Saloon/Models/Furniture/Barrel02
+MRUItem7=/Game/Lazy_Saloon/Models/Furniture/Barrel01
+MRUItem8=/Game/Lazy_Saloon/Models/Furniture/Materials/Barrel01
+MRUItem9=/Game/Lazy_Saloon/Models/Furniture/Bed
+MRUItem10=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-Rug_2
+MRUItem11=/Game/Lazy_Saloon/Models/Furniture/Materials/Bed
+MRUItem12=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Door_Base
+MRUItem13=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/S-Trim_Trim_BaseColor
+MRUItem14=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/WFrame_Rough
+MRUItem15=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/WFrame_Base
+MRUItem16=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/Saloon-OuterWalls_02_Wall01_BaseColor
+MRUItem17=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/SWall01_Rough
+MRUItem18=/Game/Lazy_Saloon/Models/Structure/SFloorWall02
+MRUItem19=/Game/Lazy_Saloon/Models/Structure/Textures/SFloorWall02_Wall01_Roughness
 
 [AssetEditorToolkitTabLocation]
 /Game/Lazy_Saloon/Misc/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -648,11 +698,21 @@ MRUItem19=/Game/Lazy_Saloon/Models/Structure/Textures/Wall01
 /Game/Lazy_Saloon/Models/Furniture/Materials/Barrel01.Barrel01=1
 /Game/Lazy_Saloon/Models/Furniture/Barrel02.Barrel02=1
 /Game/Lazy_Saloon/Models/Furniture/Materials/Barrel02.Barrel02=1
+/Game/StarterContent/Particles/Materials/M_Dust_Particle.M_Dust_Particle=1
+/Game/StarterContent/Textures/T_Dust_Particle_D.T_Dust_Particle_D=1
+/Game/Lazy_Saloon/Models/Misc/Particles/M_Dust_Particle.M_Dust_Particle=1
+/Game/Lazy_Saloon/Models/Misc/HDRI_Epic_Courtyard_Daylight.HDRI_Epic_Courtyard_Daylight=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Lazy_Saloon/Misc/Particles/P_Ambient_Dust.P_Ambient_Dust;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Sparks.P_Sparks;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Explosion.P_Explosion;
+RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Barrel02.Barrel02;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Barrel01.Barrel01;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-Rug_2.Saloon-Rug_2;
@@ -667,12 +727,6 @@ RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/SFloorWall01.SFloorWall01;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/Walls02.Walls02;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/S-Trim.S-Trim;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/Wall01.Wall01;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/Wall01.Wall01;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Misc/KeepOut-Decal.KeepOut-Decal;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-BarShelf.Saloon-BarShelf;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-BarBase.Saloon-BarBase;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-BarTop.Saloon-BarTop;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-Chair_S_2.Saloon-Chair_S_2;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -824,8 +878,8 @@ bMaterialQualityUsed[2]=0
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
+Brush=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
