--- a/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,8 +128,8 @@ bImportMaterials=False
 bImportTextures=False
 
 [LandscapeEdit]
-ToolStrength=1.000000
-BrushRadius=2048.005371
+ToolStrength=0.514286
+BrushRadius=1283.448853
 AlphaBrushAutoRotate=True
 WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
 WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
@@ -146,11 +146,15 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+BrushFalloff=0.580952
+NoiseScale=72.164764
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,
 StaticMesh=StaticMesh.ImportSettings.Material,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.NormalMap,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Wind,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.NormalMap,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Wind,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Lazy_Saloon/Models/Furniture/Materials
@@ -184,7 +188,7 @@ LastLevel=/Game/Lazy_Saloon/WesternMap
 CleanShutdown=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=LightingResults
 
 [DetailCategories]
 FirstPersonCharacter_C.TransformCommon=True
@@ -255,7 +259,7 @@ StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=True
 StaticMeshActor.Physics=False
-StaticMeshActor.Collision=False
+StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=False
 StaticMeshActor.Rendering=False
 StaticMeshActor.VirtualTexture=True
@@ -320,10 +324,10 @@ StaticMesh.StaticMeshMaterials=True
 StaticMesh.LODCustomMode=False
 StaticMesh.LOD0=False
 StaticMesh.LodSettings=False
-StaticMesh.StaticMesh=True
+StaticMesh.StaticMesh=False
 StaticMesh.Collision=True
-StaticMesh.ImportSettings=True
-StaticMesh.Navigation=True
+StaticMesh.ImportSettings=False
+StaticMesh.Navigation=False
 CapsuleComponent.TransformCommon=True
 CapsuleComponent.Shape=True
 CapsuleComponent.Navigation=True
@@ -352,8 +356,8 @@ PreviewMaterial.Refraction=True
 PreviewMaterial.Lightmass=True
 PreviewMaterial.Previewing=True
 PreviewMaterial.ImportSettings=True
-MaterialExpressionVectorParameter.General=True
-MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.General=False
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=False
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
@@ -551,7 +555,7 @@ MaterialExpressionConstant.MaterialExpression=True
 MaterialMergeOptions.OutputMaterialSettings=True
 MaterialOptions.MeshSettings=True
 MaterialOptions.MaterialBakeSettings=True
-StaticMesh.Thumbnail=True
+StaticMesh.Thumbnail=False
 FbxImportUI.Animation=True
 Emitter.TransformCommon=True
 Emitter.Particles=True
@@ -603,28 +607,77 @@ SkyLight.Tags=True
 SkyLight.Activation=True
 SkyLight.Cooking=True
 SkyLight.Actor=True
+PaintBrushSettings.Brush=True
+PaintBrushSettings.View=False
+PaintModeSettings.VertexPainting=True
+PaintModeSettings.Visualization=True
+PaintModeSettings.TexturePainting=False
+MaterialExpressionTextureSampleParameter2D.General=False
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=False
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=False
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=False
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+FoliageType_InstancedStaticMesh.Mesh=True
+FoliageType_InstancedStaticMesh.Painting=False
+FoliageType_InstancedStaticMesh.Placement=False
+FoliageType_InstancedStaticMesh.InstanceSettings=False
+FoliageType_InstancedStaticMesh.Scalability=False
+FoliageType_InstancedStaticMesh.Physics=False
+FoliageType_InstancedStaticMesh.VirtualTexture=False
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+InstancedFoliageActor.TransformCommon=True
+InstancedFoliageActor.Replication=True
+InstancedFoliageActor.Collision=True
+InstancedFoliageActor.Input=True
+InstancedFoliageActor.Actor=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Input=True
+StaticMesh.LevelOfDetail=False
+MaterialExpressionWorldPosition.UMaterialExpressionWorldPosition=True
+MaterialExpressionWorldPosition.MaterialExpression=True
+MaterialExpressionCameraPositionWS.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Blueprints/BP_LightStudio
-MRUItem1=/Game/Lazy_Saloon/Models/Misc/HDRI_Epic_Courtyard_Daylight
-MRUItem2=/Game/Lazy_Saloon/Models/Misc/Particles/M_Dust_Particle
-MRUItem3=/Game/StarterContent/Textures/T_Dust_Particle_D
-MRUItem4=/Game/StarterContent/Particles/Materials/M_Dust_Particle
-MRUItem5=/Game/Lazy_Saloon/Models/Furniture/Materials/Barrel02
-MRUItem6=/Game/Lazy_Saloon/Models/Furniture/Barrel02
-MRUItem7=/Game/Lazy_Saloon/Models/Furniture/Barrel01
-MRUItem8=/Game/Lazy_Saloon/Models/Furniture/Materials/Barrel01
-MRUItem9=/Game/Lazy_Saloon/Models/Furniture/Bed
-MRUItem10=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-Rug_2
-MRUItem11=/Game/Lazy_Saloon/Models/Furniture/Materials/Bed
-MRUItem12=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Door_Base
-MRUItem13=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/S-Trim_Trim_BaseColor
-MRUItem14=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/WFrame_Rough
-MRUItem15=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/WFrame_Base
-MRUItem16=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/Saloon-OuterWalls_02_Wall01_BaseColor
-MRUItem17=/Game/Lazy_Saloon/Models/Structure/Textures/Textures/SWall01_Rough
-MRUItem18=/Game/Lazy_Saloon/Models/Structure/SFloorWall02
-MRUItem19=/Game/Lazy_Saloon/Models/Structure/Textures/SFloorWall02_Wall01_Roughness
+MRUItem0=/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01
+MRUItem1=/Game/Terrain/Mesh/Surround/PR_background_E_E1_LOW
+MRUItem2=/Game/Terrain/Mesh/Surround/PR_background_E_W2_LOW
+MRUItem3=/Game/Terrain/Mesh/Surround/PR_background_E_W1_LOW
+MRUItem4=/Game/Terrain/Mesh/Surround/PR_background_E_S2_LOW
+MRUItem5=/Game/Terrain/Mesh/Surround/PR_background_E_S1_LOW
+MRUItem6=/Game/Terrain/Mesh/Surround/PR_background_E_N2_LOW
+MRUItem7=/Game/Terrain/Mesh/Surround/PR_background_E_N1_LOW
+MRUItem8=/Game/Terrain/Mesh/Surround/PR_background_E_E2_LOW
+MRUItem9=/Game/Terrain/Mesh/Surround/Mobile_mountain_e_M_summer
+MRUItem10=/Game/Terrain/Mesh/SM_FieldGrass_01
+MRUItem11=/Game/Terrain/Materials/Foilage02/M_FieldGrass_01
+MRUItem12=/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01_LOD2
+MRUItem13=/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01_LOD1
+MRUItem14=/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var01
+MRUItem15=/Game/Terrain/Materials/Foilage02/ast4
+MRUItem16=/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var03
+MRUItem17=/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var02
+MRUItem18=/Game/Terrain/Materials/Foilage01/M_Simple_Cutout_Wind
+MRUItem19=/Game/Terrain/Materials/Foilage01/M_Inst_Landscape_Foliage_Var03
 
 [AssetEditorToolkitTabLocation]
 /Game/Lazy_Saloon/Misc/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -702,11 +755,48 @@ MRUItem19=/Game/Lazy_Saloon/Models/Structure/Textures/SFloorWall02_Wall01_Roughn
 /Game/StarterContent/Textures/T_Dust_Particle_D.T_Dust_Particle_D=1
 /Game/Lazy_Saloon/Models/Misc/Particles/M_Dust_Particle.M_Dust_Particle=1
 /Game/Lazy_Saloon/Models/Misc/HDRI_Epic_Courtyard_Daylight.HDRI_Epic_Courtyard_Daylight=1
+/Game/Terrain/Materials/M_Landscape.M_Landscape=1
+/Game/Terrain/Materials/Foilage02/Tree00.Tree00=1
+/Game/Terrain/Materials/Foilage02/Tree01.Tree01=1
+/Game/Terrain/Mesh/Tree.Tree=1
+/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var02.SM_GrassPatch_Var02=1
+/Game/Terrain/Materials/Foilage01/M_Inst_Landscape_Foliage_Var01.M_Inst_Landscape_Foliage_Var01=1
+/Game/Terrain/Materials/Foilage01/M_Inst_Landscape_Foliage_Var02.M_Inst_Landscape_Foliage_Var02=1
+/Game/Terrain/Materials/Foilage01/M_Inst_Landscape_Foliage_Var03.M_Inst_Landscape_Foliage_Var03=1
+/Game/Terrain/Materials/Foilage01/M_Simple_Cutout_Wind.M_Simple_Cutout_Wind=1
+/Game/Terrain/Materials/Foilage01/M_Uber_Cutout_Wind.M_Uber_Cutout_Wind=1
+/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var03.SM_GrassPatch_Var03=1
+/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var01.SM_GrassPatch_Var01=1
+/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01.M_FieldGrass_Inst_01=1
+/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01_LOD1.M_FieldGrass_Inst_01_LOD1=1
+/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01_LOD2.M_FieldGrass_Inst_01_LOD2=1
+/Game/Terrain/Materials/Foilage02/M_FieldGrass_01.M_FieldGrass_01=1
+/Game/Terrain/Mesh/SM_FieldGrass_01.SM_FieldGrass_01=1
+/Game/Terrain/Mesh/Surround/Mobile_mountain_e_M_summer.Mobile_mountain_e_M_summer=1
+/Game/Terrain/Mesh/Surround/PR_background_E_E1_LOW.PR_background_E_E1_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_E2_LOW.PR_background_E_E2_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_N1_LOW.PR_background_E_N1_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_N2_LOW.PR_background_E_N2_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_S1_LOW.PR_background_E_S1_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_S2_LOW.PR_background_E_S2_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_W1_LOW.PR_background_E_W1_LOW=1
+/Game/Terrain/Mesh/Surround/PR_background_E_W2_LOW.PR_background_E_W2_LOW=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_E1_LOW.PR_background_E_E1_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_E2_LOW.PR_background_E_E2_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_N1_LOW.PR_background_E_N1_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_N2_LOW.PR_background_E_N2_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_S1_LOW.PR_background_E_S1_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_S2_LOW.PR_background_E_S2_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_W1_LOW.PR_background_E_W1_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_W2_LOW.PR_background_E_W2_LOW;
+RecentlyPlaced=/Game/Terrain/Mesh/SM_FieldGrass_01.SM_FieldGrass_01;
+RecentlyPlaced=/Game/Terrain/Materials/Foilage01/SM_GrassPatch_Var01.SM_GrassPatch_Var01;
+RecentlyPlaced=/Game/Terrain/Mesh/Tree.Tree;
 RecentlyPlaced=/Game/Lazy_Saloon/Misc/Particles/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Sparks.P_Sparks;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Smoke.P_Smoke;
@@ -716,17 +806,6 @@ RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Barrel02.Barrel02;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Barrel01.Barrel01;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Materials/Saloon-Rug_2.Saloon-Rug_2;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Saloon-Rug.Saloon-Rug;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Bed.Bed;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/S-Trim.S-Trim;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/WFrame.WFrame;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/SFloorWall02.SFloorWall02;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Saloon-Door.Saloon-Door;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/SFloorWall01.SFloorWall01;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/Walls02.Walls02;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/S-Trim.S-Trim;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Textures/Wall01.Wall01;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -884,6 +963,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
 Object=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [RootWindow]
 ScreenPosition=X=201.000 Y=81.000
@@ -1639,5 +1719,23 @@ Warning_CompileErrorsInMaterial=False
 StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=True
 StaticMesh.Collision=True
+
+[FoliageEdit]
+Radius=836.184082
+PaintDensity=0.160000
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
+IsInSingleInstantiationMode=False
+IsInSpawnInCurrentLevelMode=False
+SingleInstantiationPlacementMode=0
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
 
 
