--- a/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Western/Lazy Saloon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ NoiseScale=72.164764
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Rendering Features.Rendering Features
+PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,
 StaticMesh=StaticMesh.ImportSettings.Material,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.NormalMap,MaterialEditorInstanceConstant.ParameterGroups.Opacity,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Wind,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.ParameterGroups.Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=
@@ -186,7 +186,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Lazy_Saloon/WesternMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -326,7 +326,7 @@ StaticMesh.LODCustomMode=False
 StaticMesh.LOD0=False
 StaticMesh.LodSettings=False
 StaticMesh.StaticMesh=False
-StaticMesh.Collision=True
+StaticMesh.Collision=False
 StaticMesh.ImportSettings=False
 StaticMesh.Navigation=False
 CapsuleComponent.TransformCommon=True
@@ -454,11 +454,11 @@ PostProcessVolume.Color Grading=False
 PostProcessVolume.Film=False
 PostProcessVolume.Mobile Tonemapper=False
 PostProcessVolume.Rendering Features=True
-PostProcessVolume.PostProcessVolumeSettings=True
-PostProcessVolume.Lighting=True
-PostProcessVolume.BrushSettings=True
-PostProcessVolume.Physics=True
-PostProcessVolume.VirtualTexture=True
+PostProcessVolume.PostProcessVolumeSettings=False
+PostProcessVolume.Lighting=False
+PostProcessVolume.BrushSettings=False
+PostProcessVolume.Physics=False
+PostProcessVolume.VirtualTexture=False
 PostProcessVolume.Tags=True
 PostProcessVolume.Activation=True
 PostProcessVolume.Cooking=True
@@ -532,10 +532,10 @@ SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 StaticMeshComponent.TransformCommon=True
-StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.StaticMesh=False
 StaticMeshComponent.Materials=False
 StaticMeshComponent.Physics=False
-StaticMeshComponent.Collision=True
+StaticMeshComponent.Collision=False
 StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.VirtualTexture=True
@@ -662,28 +662,45 @@ FbxExportOption.Mesh=True
 FbxExportOption.StaticMesh=True
 FbxExportOption.SkeletalMesh=True
 FbxExportOption.Animation=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Physics=False
+TextRenderActor.Lighting=True
+TextRenderActor.Rendering=False
+TextRenderActor.VirtualTexture=True
+TextRenderActor.Tags=True
+TextRenderActor.Activation=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Input=True
+MaterialExpressionFontSampleParameter.General=True
+MaterialExpressionFontSampleParameter.MaterialExpression=True
+MaterialExpressionFontSampleParameter.MaterialExpressionFontSample=True
+Font.Font=True
+Font.OfflineFont=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Lazy_Saloon/Models/Furniture/toilet
-MRUItem1=/Game/Lazy_Saloon/Models/Furniture/Materials/Sacred_Toilet
-MRUItem2=/Game/Lazy_Saloon/Models/Structure/Textures/Light
-MRUItem3=/Game/Lazy_Saloon/Models/Furniture/Light
-MRUItem4=/Game/Lazy_Saloon/Models/Furniture/Desk
-MRUItem5=/Game/Lazy_Saloon/Models/Furniture/Materials/Desk
-MRUItem6=/Game/Lazy_Saloon/Models/Furniture/BedsideTable
-MRUItem7=/Game/Lazy_Saloon/Models/Furniture/Materials/Bedside
-MRUItem8=/Game/Lazy_Saloon/Models/Furniture/BookShelf_Large
-MRUItem9=/Game/Terrain/Materials/Foilage02/M_FieldGrass_Inst_01
-MRUItem10=/Game/Terrain/Mesh/Surround/PR_background_E_E1_LOW
-MRUItem11=/Game/Terrain/Mesh/Surround/PR_background_E_W2_LOW
-MRUItem12=/Game/Terrain/Mesh/Surround/PR_background_E_W1_LOW
-MRUItem13=/Game/Terrain/Mesh/Surround/PR_background_E_S2_LOW
-MRUItem14=/Game/Terrain/Mesh/Surround/PR_background_E_S1_LOW
-MRUItem15=/Game/Terrain/Mesh/Surround/PR_background_E_N2_LOW
-MRUItem16=/Game/Terrain/Mesh/Surround/PR_background_E_N1_LOW
-MRUItem17=/Game/Terrain/Mesh/Surround/PR_background_E_E2_LOW
-MRUItem18=/Game/Terrain/Mesh/Surround/Mobile_mountain_e_M_summer
-MRUItem19=/Game/Terrain/Mesh/SM_FieldGrass_01
+MRUItem0=/Game/Lazy_Saloon/Models/Furniture/BookShelf_Small
+MRUItem1=/Game/Lazy_Saloon/Models/Furniture/Materials/Bookshelf-L_2
+MRUItem2=/Game/Lazy_Saloon/Models/Furniture/BookShelf_Large
+MRUItem3=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/BookShelf_Large_Wood01_Height
+MRUItem4=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/BookShelf_Large_Wood01_BaseColor_Mat
+MRUItem5=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Mug_Metal_Roughness
+MRUItem6=/Game/Lazy_Saloon/Models/Mugs03
+MRUItem7=/Game/Lazy_Saloon/Models/Mugs02
+MRUItem8=/Game/Lazy_Saloon/Models/Mugs01
+MRUItem9=/Game/Lazy_Saloon/Models/Furniture/Mug
+MRUItem10=/Game/Lazy_Saloon/Models/Furniture/Materials/Mug
+MRUItem11=/Game/Lazy_Saloon/Models/Misc/Tophat_Mat
+MRUItem12=/Game/Lazy_Saloon/Models/Misc/Tophat
+MRUItem13=/Game/Lazy_Saloon/Models/Misc/Stetson_Base_Mat
+MRUItem14=/Game/Lazy_Saloon/Models/Misc/Stetson
+MRUItem15=/Engine/EngineFonts/RobotoDistanceField
+MRUItem16=/Engine/EngineMaterials/DefaultTextMaterialOpaque
+MRUItem17=/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/YeenBust_D
+MRUItem18=/Game/Lazy_Saloon/Models/Furniture/Hyeenu_Bust
+MRUItem19=/Game/Lazy_Saloon/Models/Furniture/Materials/YeenBust
 
 [AssetEditorToolkitTabLocation]
 /Game/Lazy_Saloon/Misc/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -793,11 +810,42 @@ MRUItem19=/Game/Terrain/Mesh/SM_FieldGrass_01
 /Game/Lazy_Saloon/Models/Furniture/Desk.Desk=1
 /Game/Lazy_Saloon/Models/Furniture/Materials/Sacred_Toilet.Sacred_Toilet=1
 /Game/Lazy_Saloon/Models/Furniture/toilet.toilet=1
+/Game/Lazy_Saloon/Models/Furniture/Divider.Divider=1
+/Game/Lazy_Saloon/Models/Structure/Pillars.Pillars=1
+/Game/Lazy_Saloon/Models/Furniture/Materials/YeenBust.YeenBust=1
+/Game/Lazy_Saloon/Models/Furniture/Hyeenu_Bust.Hyeenu_Bust=1
+/Engine/EngineMaterials/DefaultTextMaterialOpaque.DefaultTextMaterialOpaque=1
+/Engine/EngineFonts/RobotoDistanceField.RobotoDistanceField=1
+/Game/Lazy_Saloon/Models/Misc/Tophat.Tophat=1
+/Game/Lazy_Saloon/Models/Misc/Stetson_Base_Mat.Stetson_Base_Mat=1
+/Game/Lazy_Saloon/Models/Misc/Stetson.Stetson=1
+/Game/Lazy_Saloon/Models/Misc/Tophat_Mat.Tophat_Mat=1
+/Game/Lazy_Saloon/Models/Mugs03.Mugs03=1
+/Game/Lazy_Saloon/Models/Mugs02.Mugs02=1
+/Game/Lazy_Saloon/Models/Mugs01.Mugs01=1
+/Game/Lazy_Saloon/Models/Furniture/Materials/Mug.Mug=1
+/Game/Lazy_Saloon/Models/Furniture/Mug.Mug=1
+/Game/Lazy_Saloon/Models/Furniture/Materials/Textures/Mug_Metal_Roughness.Mug_Metal_Roughness=1
+/Game/Lazy_Saloon/Models/Furniture/Materials/Bookshelf-L_2.Bookshelf-L_2=1
+/Game/Lazy_Saloon/Models/Furniture/Materials/Bookshelf-L.Bookshelf-L=1
+/Game/Lazy_Saloon/Models/Furniture/BookShelf_Large.BookShelf_Large=1
+/Game/Lazy_Saloon/Models/Furniture/BookShelf_Small.BookShelf_Small=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Misc/Tophat.Tophat;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Misc/Stetson.Stetson;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Misc/KeepOut.KeepOut;
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Hyeenu_Bust.Hyeenu_Bust;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Mug.Mug;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Divider.Divider;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Mugs02.Mugs02;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Mugs03.Mugs03;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Mugs01.Mugs01;
+RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Candle.Candle;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Broom.Broom;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Structure/Pillars.Pillars;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -807,20 +855,9 @@ RecentlyPlaced=/Game/MS_Vegetables/3D_Asset/06_Potato_tl0kechjw/tl0kechjw_LOD0.t
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Books01.Books01;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Books02.Books02;
 RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Saloon-Chair_S.Saloon-Chair_S;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Desk.Desk;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/Light.Light;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/BookShelf_Small.BookShelf_Small;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/BookShelf_Large.BookShelf_Large;
-RecentlyPlaced=/Game/Lazy_Saloon/Models/Furniture/BedsideTable.BedsideTable;
-RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_E1_LOW.PR_background_E_E1_LOW;
-RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_E2_LOW.PR_background_E_E2_LOW;
-RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_N1_LOW.PR_background_E_N1_LOW;
-RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_N2_LOW.PR_background_E_N2_LOW;
-RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_S1_LOW.PR_background_E_S1_LOW;
-RecentlyPlaced=/Game/Terrain/Mesh/Surround/PR_background_E_S2_LOW.PR_background_E_S2_LOW;
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -969,13 +1006,15 @@ bMaterialQualityUsed[2]=0
 
 [DetailPropertyExpansion]
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
 Object=
 StaticMeshActor=
+TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Text.TextRenderColor\" "
+Font="\"Object.Font\" "
 
 [RootWindow]
 ScreenPosition=X=201.000 Y=81.000
